syntax = "proto3";

package listInventory;

option go_package = ".;";

service InventoryListingService {
    // ListInventory returns a list of current inventory items.
    rpc ListInventory(ListInventoryRequest) returns (ListInventoryResponse);
}

message ListInventoryRequest {
}

// Define the SellerProduct message here with the same structure as in ReadCSV.go
message SellerProduct {
    int32 stock_code = 1;
    string name = 2;
    int32 quantity = 3;
    float price = 4;
}

message ListInventoryResponse {
    // List of current inventory items.
    repeated SellerProduct inventory_items = 1;
}
